add local mqtt instance, format activity topic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,11 @@ services:
       - db
     env_file:
     - .env
+  mosquitto:
+    image: eclipse-mosquitto
+    ports:
+      - 1883:1883
+      - 8883:8883
+    volumes:
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
+    restart: unless-stopped
