initial setup activity contoller

--- a/test/fixtures/equipment.yml
+++ b/test/fixtures/equipment.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: equipment
+#
+#  id          :bigint           not null, primary key
+#  type        :string
+#  name        :string
+#  brand       :string
+#  protocol    :integer
+#  location_id :bigint
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 # switches
 main_switch:
   name: kitchen main lights
