--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,3 +1,13 @@
+# == Schema Information
+#
+# Table name: locations
+#
+#  id         :bigint           not null, primary key
+#  name       :string
+#  category   :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 side_porch:
   name: pourch
   category: 1
