setup for activity api

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ pickle-email-*.html
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-services/rails/tmp/*
-services/rails/tmp
+services/*/tmp/*
+services/*/tmp
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
