--- a/services/activities/Gemfile
+++ b/services/activities/Gemfile
@@ -27,6 +27,7 @@ end
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'listen', '~> 3.3'
+  gem 'shoulda-matchers', '~> 4.5', '>= 4.5.1'
   gem 'spring'
 end
 
