--- a/services/activities/test/fixtures/equipment.yml
+++ b/services/activities/test/fixtures/equipment.yml
@@ -3,15 +3,14 @@
 # Table name: equipment
 #
 #  id          :bigint           not null, primary key
-#  type        :string
-#  name        :string
+#  type        :string           not null
+#  name        :string           not null
 #  brand       :string
-#  protocol    :integer
+#  protocol    :integer          not null
 #  location_id :bigint
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
 #
-# switches
 main_switch:
   name: kitchen main lights
   brand: Lutron Caseta
