--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,36 @@ services:
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${TEST_DATABASE_NAME}
+      POSTGRES_HOST_AUTH_METHOD: trust
+
+  web_activity:
+    # image: ha_api_web:${IMAGE_TAG}
+    container_name: ha_api_rails
+    restart: always
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build:
+      context: ${RAILS_ROOT_DIRECTORY}
+      dockerfile: Local.Dockerfile
+    environment:
+      RAILS_ENV: ${SYSTEM_ENV}
+      MQTT_HOST: mosquitto
+      MQTT_USER: ${MQTT_USER}
+      MQTT_PASSWORD: ${MQTT_PASSWORD}
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_HOST: db
+      DATABASE_NAME: ${DATABASE_NAME}
+      TEST_DATABASE_NAME: ${TEST_DATABASE_NAME}
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
+    ports:
+      - ${RAILS_PORT}:3000
+    volumes:
+      - ${RAILS_ROOT_DIRECTORY}:/usr/src/app
+    depends_on:
+      - db
 
   mosquitto:
     container_name: ha_mosquitto
@@ -29,32 +58,15 @@ services:
       - db
     environment:
       MIX_ENV: ${MIX_ENV}
+      DATABASE_USER: ${DATABASE_USER}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_HOST: db
+      DATABASE_NAME: ${DATABASE_NAME}
+      TEST_DATABASE_NAME: ${TEST_DATABASE_NAME}
+
     ports:
       - ${ELIXIR_PORT}:4000
     volumes:
       - ${ELIXIR_ROOT_DIRECTORY}:/usr/src/app
 
-  web_activity:
-    # image: ha_api_web:${IMAGE_TAG}
-    container_name: ha_api_rails
-    restart: always
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    build:
-      context: ${RAILS_ROOT_DIRECTORY}
-      dockerfile: Local.Dockerfile
-    environment:
-      RAILS_ENV: ${SYSTEM_ENV}
-      MQTT_HOST: mosquitto
-      MQTT_USER: ${MQTT_USER}
-      MQTT_PASSWORD: ${MQTT_PASSWORD}
-      DATABASE_HOST: ha_db
-      DATABASE_NAME: ${RAILS_TEST_DATABASE_NAME}
-      TEST_DATABASE_NAME: ${RAILS_TEST_DATABASE_NAME}
-      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
-    ports:
-      - ${RAILS_PORT}:3000
-    volumes:
-      - ${RAILS_ROOT_DIRECTORY}:/usr/src/app
-    depends_on:
-      - db
 
