--- a/services/reports/Dockerfile
+++ b/services/reports/Dockerfile
@@ -7,7 +7,8 @@ RUN mix archive.install hex phx_new 1.5.7 --force
 
 # COPY mix.exs .
 # COPY mix.lock .
-# ENTRYPOINT ["mix ", "phx.server"]
+# ENTRYPOINT ["mix", "phx.server"]
+CMD mix phx.server
 
 
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
