--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     build:
       context: ${RAILS_ROOT_DIRECTORY}
-      dockerfile: Dockerfile
+      target: local
     environment:
       RAILS_ENV: ${SYSTEM_ENV}
       MQTT_HOST: mosquitto
