--- a/services/activities/Gemfile
+++ b/services/activities/Gemfile
@@ -6,6 +6,7 @@ gem 'mqtt', '~> 0.4.0'
 gem 'rails', '~> 6.1.1'
 gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 5.0'
+gem 'sorbet-rails'
 gem 'sorbet-runtime'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
