using revised image for neovim

--- a/dev_env/Dockerfile
+++ b/dev_env/Dockerfile
@@ -1,13 +1,1 @@
-FROM alpine:latest AS local
-RUN apk update && apk upgrade
-
-RUN apk add --update nodejs nodejs-npm
-
-RUN apk add zsh \
-    git \
-    curl \
-    python3 \
-    py-pip \
-    neovim=0.4.4-r0
-ENTRYPOINT ["/bin/zsh"]
-
+FROM allibubba/neovim:latest AS local
