--- a/services/activities/Gemfile
+++ b/services/activities/Gemfile
@@ -19,17 +19,23 @@ gem 'bootsnap', '>= 1.4.4', require: false
 # gem 'rack-cors'
 
 group :development, :test do
+  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'factory_bot_rails', '~> 6.1'
   gem 'pp', '~> 0.2.0'
   gem 'rspec-rails', '~> 4.0', '>= 4.0.2'
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-  gem 'bullet'
 end
 
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
+  gem 'brakeman', '~> 5.0'
+  gem 'bullet', '~> 6.1', '>= 6.1.3'
   gem 'listen', '~> 3.3'
+  gem 'rails-flog', '~> 1.6', '>= 1.6.1'
+  gem 'reek', '~> 6.0', '>= 6.0.3'
+  gem 'rubocop', '~> 1.9', '>= 1.9.1'
   gem 'shoulda-matchers', '~> 4.5', '>= 4.5.1'
-  gem 'spring'
+  gem 'sorbet', '~> 0.5.6281'
+  gem 'spring', '~> 2.1', '>= 2.1.1'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
