--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: BeanCounter Workflow
+name: HA_API Workflow
 on: [push, pull_request]
 jobs:
   test:
@@ -38,9 +38,10 @@ jobs:
     - name: Build app
       working-directory: services/activities
       env:
-        PGHOST: localhost
-        PGUSER: postgres
-        PGPASSWORD: postgres
+        DATABASE_HOST: localhost
+        DATABASE_USER: postgres
+        DATABASE_PASSWORD: postgres
+        DATABASE_NAME: db
         RAILS_ENV: test
       run: |
         bin/rails db:setup
@@ -48,7 +49,9 @@ jobs:
     - name: Run tests
       working-directory: services/activities
       env:
+        DATABASE_HOST: localhost
         DATABASE_USER: postgres
         DATABASE_PASSWORD: postgres
         DATABASE_NAME: db
+        RAILS_ENV: test
       run: bundle exec rspec
